--- a/Primeiro-semestre/#1 Responsive Web Development/aula03/style/style.css
+++ b/Primeiro-semestre/#1 Responsive Web Development/aula03/style/style.css
@@ -2,3 +2,15 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
+
+body{
+    background-color: #000;
+}
+
+h1{
+    background-color: #000;
+}
+
+titulo{
+    color: #003366;
+}
