--- a/Primeiro-semestre/GlobalSolution/assets/style/index.css
+++ b/Primeiro-semestre/GlobalSolution/assets/style/index.css
@@ -1,37 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
+
 .container-fluid.main {
   position: relative;
-  /* To make the navbar positions relative to this container */
   padding: 0;
 }
 
 .navbar-default {
-  background-image: none;
-  background-color: transparent;
-  /* Make the menu become transparent */
-  border-radius: 0px;
+  background-color: rgba(0, 0, 0, 0.115);
+  border-radius: 0;
   border: 0;
   box-shadow: none;
   padding: 10px;
-  position: absolute;
-  /* Make the menu out of the document flow so it can placed anywhere without disturbing other widgets */
+  position: fixed;
+  /* Change this line to make the navigation bar fixed */
   top: 0;
   left: 0;
   right: 0;
   z-index: 10;
-  /* If you delete this line, your menu link won't be clicked because it is behind the background. Applying this code bring the menu in front of the background */
+  font-size: 20px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.29);
+  border-radius: 1px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+
 .navbar-default .navbar-brand {
-  font-family: Verdana;
+  font-family: 'Inter', -apple-system, 'Nunito', BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 30px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #ffffff;
   background-color: transparent;
+  color: #EC6E0C;
 }
+
 
 .navbar-default .navbar-nav>li>a {
   color: #ffffff;
@@ -66,33 +77,63 @@
   height: 700px;
 }
 
-@media (max-width:991px) {
+.navbar-default .navbar-nav>li {
+  position: relative;
+}
+
+.navbar-default .navbar-nav>li::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  background-color: #ffffff;
+  transition: all 0.3s ease-in-out;
+  transform: translateX(-50%);
+}
+
+.navbar-default .navbar-nav>li:hover::before {
+  width: 100%;
+}
+
+.navbar-default .navbar-nav>li>a {
+  position: relative;
+  z-index: 1;
+}
+
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus {
+  color: #EC6E0C;
+  /* Change color on hover */
+}
+
+@media (max-width: 991px) {
   .carousel .background {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 700px;
   }
-  
+
   .carousel .background.a {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/Banner\ home_Hospital\ Rio\ Preto_1366x511.webp');
   }
-  
+
   .carousel .background.b {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/Banner\ Home_HOSPMANAUS_1366x511px.webp');
   }
-  
+
   .carousel .background.c {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/Banner\ home_novo\ portal\ notrelabs_1366x511.webp');
   }
-  
 }
 
 .carousel .background {
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 700px;
+  /* height: 700px; */
 }
 
 .carousel .background.a {
@@ -107,18 +148,15 @@
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/Banner\ home_novo\ portal\ notrelabs_1366x511.webp');
 }
 
-
 .carousel-fade .carousel-inner .item {
   opacity: 0;
-  transition: opacity 0.8s;
-  /* The 0.5s describes the duration to make the opacity from 0 to 1 */
+  transition: opacity 1.2s;
 }
 
 .carousel-fade .carousel-inner .active {
   opacity: 1;
 }
 
-/* CSS Hack to trigger GPU for smooth transition */
 @media all and (transform-3d),
 (-webkit-transform-3d) {
 
@@ -145,21 +183,15 @@
   }
 }
 
-/* CSS Hack to trigger GPU for smooth transition */
-
 .covertext {
   position: absolute;
-  /* To make the div to be place anywhere. It is out of the document flow */
   top: 200px;
-  /* The distance between the div with the top of document */
   left: 0px;
-  /* Make the div full width */
   right: 0px;
-  /* Make the div full width */
 }
 
 .title {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Inter', -apple-system, 'Nunito', BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   font-weight: 600;
   font-size: 60px;
   color: #ffffff;
@@ -184,29 +216,62 @@
   padding: 15px 25px;
   font-size: 22px;
   background-image: none;
-  background-color: #FF4000;
-  border-color: #FF4000;
+  background-color: #EC6E0C;
+  border-color: #EC6E0C;
   color: #ffffff;
 }
 
-.btn,
-.btn:hover {
-  border-radius: 0px;
-  background-image: none;
-  background-color: #FF4000;
-  border-color: #FF4000;
-  color: #ffffff;
-  margin-bottom: 20px;
-  box-shadow: none;
-  outline: none;
+#titulo {
+  -webkit-animation: tracking-in-expand 0.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+  animation: tracking-in-expand 1.7s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
-.btn:focus,
-.btn:active:focus,
-.btn.active:focus,
-.btn.focus,
-.btn:active.focus,
-.btn.active.focus {
-  color: #ffffff;
-  outline: none;
+@-webkit-keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.btn-hospital {
+  border-radius: 30px;
+  padding: 15px 25px;
+  font-size: 22px;
+  background-color: #EC6E0C;
+  border: 2px solid #EC6E0C;
+  color: #fff;
+  transition: background-color 0.3s ease-in-out;
+  font-family: 'Inter', -apple-system, 'Nunito', BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
+  -webkit-animation: bounce-top 0.9s both;
+  animation: bounce-top 0.9s both;
+}
+
+
+.btn-hospital:hover,
+.btn-hospital:focus {
+  background-color: #D32F2F;
 }
